--- a/templates/sess_not_found.html
+++ b/templates/sess_not_found.html
@@ -6,7 +6,7 @@
   <body>
     <header>
       <div>
-		<h1>NO SESSIONS AVAILABLE for <mark> {{ date_param }}</mark> for any age</h1>
+		<h1>NO SESSIONS AVAILABLE for <mark> {{ date_param }}</mark> for any age group</h1>
       </div>
     </header>
   </body>
